# whisprly

./: .config.json  .env.example  .gitignore  LICENSE  README.md  build.py  config.py  main.py  pyproject.toml  requirements.txt  settings.json  start_whisprly.ps1  start_whisprly.vbs
.github/workflows/: release.yml
whisprly/: app.py  audio.py  config.py  settings_window.py  ui.py
